--- a/Códigos/trabalhoPNS.ipynb
+++ b/Códigos/trabalhoPNS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 1,
    "id": "b75cf1b1",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": 2,
    "id": "56cdc880",
    "metadata": {},
    "outputs": [],
@@ -30,10 +30,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "5cfcc85c",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\bkser\\AppData\\Local\\Temp\\ipykernel_22492\\800739080.py:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "  df = pd.read_csv('..\\Bases\\Originais\\\\pns2019.csv', usecols=colunas)\n"
+     ]
+    },
     {
      "data": {
       "application/vnd.microsoft.datawrangler.viewer.v0+json": {
@@ -770,7 +780,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "02821fd9-1af0-4d9d-a832-4909248ffc6a",
+       "ref": "52fccc7d-194b-4b55-80b6-f7628222d78b",
        "rows": [
         [
          "0",
@@ -1704,7 +1714,7 @@
        "[5 rows x 145 columns]"
       ]
      },
-     "execution_count": 37,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1716,7 +1726,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 38,
+   "execution_count": 4,
    "id": "c60cb62d",
    "metadata": {},
    "outputs": [],
@@ -1773,7 +1783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 5,
    "id": "ea8120b5",
    "metadata": {},
    "outputs": [],
@@ -1783,12 +1793,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "bb7fde0b",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\bkser\\AppData\\Local\\Temp\\ipykernel_22492\\859905064.py:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "  df_filtrado.to_csv('..\\Bases\\Criados\\\\base_doencas_cardiacas.csv', index=False)\n"
+     ]
+    }
+   ],
    "source": [
-    "df_filtrado.to_csv('..\\Bases\\Criadas\\\\base_doencas_cardiacas.csv', index=False)"
+    "df_filtrado.to_csv('..\\Bases\\Criados\\\\base_doencas_cardiacas.csv', index=False)"
    ]
   },
   {
@@ -1801,7 +1822,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 7,
    "id": "750af834",
    "metadata": {},
    "outputs": [
@@ -2486,7 +2507,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "198ef15c-fb7f-4787-aa45-0098b1d652dd",
+       "ref": "3de30c50-084f-4075-a860-7b607e4fa4bd",
        "rows": [
         [
          "64848",
@@ -9686,7 +9707,7 @@
        "[24392 rows x 134 columns]"
       ]
      },
-     "execution_count": 41,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9697,7 +9718,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 8,
    "id": "012c4a04",
    "metadata": {},
    "outputs": [
@@ -9719,7 +9740,7 @@
        "      dtype='object')"
       ]
      },
-     "execution_count": 42,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9730,7 +9751,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 9,
    "id": "456431fd",
    "metadata": {},
    "outputs": [
@@ -9751,7 +9772,7 @@
        "Length: 84, dtype: int64"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9762,7 +9783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 10,
    "id": "d4f614cd",
    "metadata": {},
    "outputs": [
@@ -9772,7 +9793,7 @@
        "np.int64(84)"
       ]
      },
-     "execution_count": 44,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -9783,7 +9804,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 11,
    "id": "2832600f",
    "metadata": {},
    "outputs": [
@@ -10468,7 +10489,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "d8afa112-6db0-4e4e-9665-e628ad577138",
+       "ref": "3a70e872-87aa-4a0c-9e91-3fa6d090d4fc",
        "rows": [
         [
          "65194",
@@ -17668,7 +17689,7 @@
        "[687 rows x 134 columns]"
       ]
      },
-     "execution_count": 45,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -17680,7 +17701,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 12,
    "id": "b95af580",
    "metadata": {},
    "outputs": [
@@ -18365,7 +18386,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "3f8e3604-48d4-46a1-9af2-3a8697516dec",
+       "ref": "003ef986-53a2-4575-8f29-e5d0357fd94d",
        "rows": [
         [
          "64848",
@@ -25565,7 +25586,7 @@
        "[3454 rows x 134 columns]"
       ]
      },
-     "execution_count": 46,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -25577,7 +25598,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 13,
    "id": "6053b211",
    "metadata": {},
    "outputs": [
@@ -25596,7 +25617,7 @@
       "\u001b[1;31mKeyError\u001b[0m: 'D01303'",
       "\nThe above exception was the direct cause of the following exception:\n",
       "\u001b[1;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
-      "Cell \u001b[1;32mIn[47], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m faltante3 \u001b[38;5;241m=\u001b[39m df_filtrado[\u001b[43mdf_filtrado\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mD01303\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39misna() \u001b[38;5;241m&\u001b[39m df_filtrado[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD014\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misna()]\n\u001b[0;32m      2\u001b[0m faltante3\n",
+      "Cell \u001b[1;32mIn[13], line 1\u001b[0m\n\u001b[1;32m----> 1\u001b[0m faltante3 \u001b[38;5;241m=\u001b[39m df_filtrado[\u001b[43mdf_filtrado\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[38;5;124;43mD01303\u001b[39;49m\u001b[38;5;124;43m'\u001b[39;49m\u001b[43m]\u001b[49m\u001b[38;5;241m.\u001b[39misna() \u001b[38;5;241m&\u001b[39m df_filtrado[\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mD014\u001b[39m\u001b[38;5;124m'\u001b[39m]\u001b[38;5;241m.\u001b[39misna()]\n\u001b[0;32m      2\u001b[0m faltante3\n",
       "File \u001b[1;32mc:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\frame.py:4102\u001b[0m, in \u001b[0;36mDataFrame.__getitem__\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   4100\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39mcolumns\u001b[38;5;241m.\u001b[39mnlevels \u001b[38;5;241m>\u001b[39m \u001b[38;5;241m1\u001b[39m:\n\u001b[0;32m   4101\u001b[0m     \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_getitem_multilevel(key)\n\u001b[1;32m-> 4102\u001b[0m indexer \u001b[38;5;241m=\u001b[39m \u001b[38;5;28;43mself\u001b[39;49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mcolumns\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[43mget_loc\u001b[49m\u001b[43m(\u001b[49m\u001b[43mkey\u001b[49m\u001b[43m)\u001b[49m\n\u001b[0;32m   4103\u001b[0m \u001b[38;5;28;01mif\u001b[39;00m is_integer(indexer):\n\u001b[0;32m   4104\u001b[0m     indexer \u001b[38;5;241m=\u001b[39m [indexer]\n",
       "File \u001b[1;32mc:\\Users\\bkser\\AppData\\Local\\Programs\\Python\\Python313\\Lib\\site-packages\\pandas\\core\\indexes\\base.py:3812\u001b[0m, in \u001b[0;36mIndex.get_loc\u001b[1;34m(self, key)\u001b[0m\n\u001b[0;32m   3807\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(casted_key, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;129;01mor\u001b[39;00m (\n\u001b[0;32m   3808\u001b[0m         \u001b[38;5;28misinstance\u001b[39m(casted_key, abc\u001b[38;5;241m.\u001b[39mIterable)\n\u001b[0;32m   3809\u001b[0m         \u001b[38;5;129;01mand\u001b[39;00m \u001b[38;5;28many\u001b[39m(\u001b[38;5;28misinstance\u001b[39m(x, \u001b[38;5;28mslice\u001b[39m) \u001b[38;5;28;01mfor\u001b[39;00m x \u001b[38;5;129;01min\u001b[39;00m casted_key)\n\u001b[0;32m   3810\u001b[0m     ):\n\u001b[0;32m   3811\u001b[0m         \u001b[38;5;28;01mraise\u001b[39;00m InvalidIndexError(key)\n\u001b[1;32m-> 3812\u001b[0m     \u001b[38;5;28;01mraise\u001b[39;00m \u001b[38;5;167;01mKeyError\u001b[39;00m(key) \u001b[38;5;28;01mfrom\u001b[39;00m\u001b[38;5;250m \u001b[39m\u001b[38;5;21;01merr\u001b[39;00m\n\u001b[0;32m   3813\u001b[0m \u001b[38;5;28;01mexcept\u001b[39;00m \u001b[38;5;167;01mTypeError\u001b[39;00m:\n\u001b[0;32m   3814\u001b[0m     \u001b[38;5;66;03m# If we have a listlike key, _check_indexing_error will raise\u001b[39;00m\n\u001b[0;32m   3815\u001b[0m     \u001b[38;5;66;03m#  InvalidIndexError. Otherwise we fall through and re-raise\u001b[39;00m\n\u001b[0;32m   3816\u001b[0m     \u001b[38;5;66;03m#  the TypeError.\u001b[39;00m\n\u001b[0;32m   3817\u001b[0m     \u001b[38;5;28mself\u001b[39m\u001b[38;5;241m.\u001b[39m_check_indexing_error(key)\n",
       "\u001b[1;31mKeyError\u001b[0m: 'D01303'"
