Criação base outliers

--- a/Códigos/trabalhoPNS.ipynb
+++ b/Códigos/trabalhoPNS.ipynb
@@ -12,20 +12,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "56cdc880",
    "metadata": {},
    "outputs": [],
    "source": [
-    "colunas = ['V0001', 'V0015', 'V0026', 'V0031', 'B001', 'C006', 'C008', 'C009', 'C011', 'C012', 'D00201', 'D00301', 'D008', 'D00901', 'D014', 'D015', \n",
-    "           'E001', 'E002', 'E003', 'E004', 'E005', 'E006011', 'E008', 'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01602', 'E01604',\n",
-    "           'E017', 'E01801', 'E01802', 'E01804', 'E019', 'E027', 'F001011', 'F007011', 'F008011', 'VDF001', 'F016', 'G059', 'G060', 'G062', 'G032', 'I00102', 'I00103', 'I001031', 'C00301', 'I006', 'I004', 'I00401', 'I00402', 'I00403',\n",
-    "           'I012', 'J001', 'J00101', 'J002', 'J00402', 'J00404', 'J007', 'J00801', 'J01101', 'J060', 'M001', 'M00203', 'M00302', 'M011011', 'M011021', 'M011051', 'M011071', 'N00101', 'N004', 'N005', 'N008', 'N010', 'N011',\n",
-    "           'N012', 'N016', 'P00103', 'P00104', 'P00403', 'P00404', 'P00901', 'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02601', 'P027', 'P02801', 'P029', 'P034', 'P035', 'P03701', 'P03702',\n",
-    "           'P04501', 'P04502', 'P050', 'P051', 'P052', 'P053', 'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P05901', 'P05902', 'P05903', 'P05904', 'P06701', 'P068', 'Q00101', 'Q00201', 'Q02901', 'Q03001', 'Q05901', 'Q060', 'Q06306', \n",
-    "           'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311', 'Q064',\n",
-    "           'Q06506', 'Q06507', 'Q06508', 'Q06509', 'Q06601', 'Q067', 'Q068', 'Q11006', 'Q128', \n",
-    "           'T001', 'H001', 'H002', 'H003', 'H004', 'H010']"
+    "colunas_base_outliers = ['V0001', 'V0015', 'V0026', 'V0031', 'B001', 'C006', 'C008', 'C009', 'C011', 'C012','D00901', 'D014', 'D015', \n",
+    "                        'E006011', 'E008', 'E01602', 'E01604', 'E017', 'E01802', 'E01804', 'E019', 'E027', 'F001011', 'F007011', 'F008011', 'VDF001', 'F016', 'G059', 'G060', 'G062', 'G032', \n",
+    "                        'I006', 'I004', 'I00401', 'I00402', 'I00403','I012', 'J001', 'J00101', 'J002', 'J00402', 'J00404', 'J007', 'J00801', 'J01101', 'J060', 'M001', 'M00203', 'M011011', 'M011021', 'M011051', 'M011071', \n",
+    "                        'N004', 'N005', 'N008', 'N010', 'N011', 'N012', 'N016', 'P00104', 'P00404', 'P00901', 'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02601', 'P027', 'P02801', 'P029', 'P035', 'P03701', 'P03702',\n",
+    "                        'P04501', 'P04502', 'P050', 'P051', 'P052', 'P053', 'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P06701', 'P068', 'Q03001', 'Q05901', 'Q060', 'Q06306', 'Q064',\n",
+    "                        'Q06506', 'Q06507', 'Q06508', 'Q06509', 'Q06601', 'Q067', 'Q068', 'Q11006', 'Q128', 'T001', 'H003', 'H004', 'H010']"
    ]
   },
   {
@@ -307,6 +304,42 @@
    "outputs": [],
    "source": [
     "df_filtrado = df_filtrado.drop(columns=['V0015', 'V0001', 'C012', 'D015', 'E027', 'F016', 'G032', 'I012', 'J060', 'M001', 'M00302'])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "faf47262",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df_filtrado.to_csv('..\\Bases\\Criados\\\\base_outliers.csv', index=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fb24f4a0",
+   "metadata": {},
+   "source": [
+    "#### Para aquiiiiiiiiiiiiiiiiii não roda tudoooooooooooooooo "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "9b940021",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "colunas_base_DC = ['V0001', 'V0015', 'V0026', 'V0031', 'B001', 'C006', 'C008', 'C009', 'C011', 'C012', 'D00201', 'D00301', 'D008', 'D00901', 'D014', 'D015', \n",
+    "                    'E001', 'E002', 'E003', 'E004', 'E005', 'E006011', 'E008', 'E011', 'E014011', 'E01601', 'E01603', 'E01605', 'E01602', 'E01604',\n",
+    "                    'E017', 'E01801', 'E01802', 'E01804', 'E019', 'E027', 'F001011', 'F007011', 'F008011', 'VDF001', 'F016', 'G059', 'G060', 'G062', 'G032', 'I00102', 'I00103', 'I001031', 'C00301', 'I006', 'I004', 'I00401', 'I00402', 'I00403',\n",
+    "                    'I012', 'J001', 'J00101', 'J002', 'J00402', 'J00404', 'J007', 'J00801', 'J01101', 'J060', 'M001', 'M00203', 'M00302', 'M011011', 'M011021', 'M011051', 'M011071', 'N00101', 'N004', 'N005', 'N008', 'N010', 'N011',\n",
+    "                    'N012', 'N016', 'P00103', 'P00104', 'P00403', 'P00404', 'P00901', 'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02601', 'P027', 'P02801', 'P029', 'P034', 'P035', 'P03701', 'P03702',\n",
+    "                    'P04501', 'P04502', 'P050', 'P051', 'P052', 'P053', 'P05401', 'P05404', 'P05407', 'P05410', 'P05413', 'P05416', 'P05419', 'P05901', 'P05902', 'P05903', 'P05904', 'P06701', 'P068', 'Q00101', 'Q00201', 'Q02901', 'Q03001', 'Q05901', 'Q060', 'Q06306', \n",
+    "                    'Q06307', 'Q06308', 'Q06309', 'Q06310', 'Q06311', 'Q064',\n",
+    "                    'Q06506', 'Q06507', 'Q06508', 'Q06509', 'Q06601', 'Q067', 'Q068', 'Q11006', 'Q128', \n",
+    "                    'T001', 'H001', 'H002', 'H003', 'H004', 'H010']"
    ]
   },
   {
