Arrumação do box plot por causa da nova base outliers

--- a/Códigos/trabalhoPNS.ipynb
+++ b/Códigos/trabalhoPNS.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "b75cf1b1",
    "metadata": {},
    "outputs": [],
@@ -12,12 +12,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "56cdc880",
    "metadata": {},
    "outputs": [],
    "source": [
-    "colunas_base_outliers = ['V0001', 'V0015', 'V0026', 'V0031', 'B001', 'C006', 'C008', 'C009', 'C011', 'C012','D00901', 'D014', 'D015', \n",
+    "colunas_base_outliers = ['V0001', 'V0015', 'M00302', 'V0026', 'V0031', 'B001', 'C006', 'C008', 'C009', 'C011', 'C012','D00901', 'D014', 'D015', \n",
     "                        'E006011', 'E008', 'E01602', 'E01604', 'E017', 'E01802', 'E01804', 'E019', 'E027', 'F001011', 'F007011', 'F008011', 'VDF001', 'F016', 'G059', 'G060', 'G062', 'G032', \n",
     "                        'I006', 'I004', 'I00401', 'I00402', 'I00403','I012', 'J001', 'J00101', 'J002', 'J00402', 'J00404', 'J007', 'J00801', 'J01101', 'J060', 'M001', 'M00203', 'M011011', 'M011021', 'M011051', 'M011071', \n",
     "                        'N004', 'N005', 'N008', 'N010', 'N011', 'N012', 'N016', 'P00104', 'P00404', 'P00901', 'P01101', 'P02001', 'P018', 'P02002', 'P02501', 'P02602', 'P02601', 'P027', 'P02801', 'P029', 'P035', 'P03701', 'P03702',\n",
@@ -27,7 +27,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 18,
    "id": "5cfcc85c",
    "metadata": {},
    "outputs": [
@@ -37,8 +37,8 @@
      "text": [
       "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
       "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_7428\\800739080.py:1: SyntaxWarning: invalid escape sequence '\\B'\n",
-      "  df = pd.read_csv('..\\Bases\\Originais\\\\pns2019.csv', usecols=colunas)\n"
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_18608\\1554530629.py:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "  df = pd.read_csv('..\\Bases\\Originais\\\\pns2019.csv', usecols=colunas_base_outliers)\n"
      ]
     },
     {
@@ -67,19 +67,19 @@
        "      <th>V0026</th>\n",
        "      <th>V0031</th>\n",
        "      <th>B001</th>\n",
-       "      <th>C00301</th>\n",
        "      <th>C006</th>\n",
        "      <th>C008</th>\n",
        "      <th>C009</th>\n",
        "      <th>C011</th>\n",
+       "      <th>C012</th>\n",
        "      <th>...</th>\n",
+       "      <th>Q06509</th>\n",
+       "      <th>Q06601</th>\n",
        "      <th>Q067</th>\n",
        "      <th>Q068</th>\n",
        "      <th>Q11006</th>\n",
        "      <th>Q128</th>\n",
        "      <th>T001</th>\n",
-       "      <th>H001</th>\n",
-       "      <th>H002</th>\n",
        "      <th>H003</th>\n",
        "      <th>H004</th>\n",
        "      <th>H010</th>\n",
@@ -93,15 +93,15 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>1.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>55.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>1.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>2.0</td>\n",
+       "      <td>NaN</td>\n",
+       "      <td>NaN</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>2.0</td>\n",
@@ -117,11 +117,11 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>2.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>69.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -141,11 +141,11 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>3.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>31.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>4.0</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -165,11 +165,11 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>4.0</td>\n",
        "      <td>1.0</td>\n",
        "      <td>9.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -189,11 +189,11 @@
        "      <td>1</td>\n",
        "      <td>1</td>\n",
        "      <td>1.0</td>\n",
-       "      <td>5.0</td>\n",
        "      <td>2.0</td>\n",
        "      <td>6.0</td>\n",
        "      <td>4.0</td>\n",
        "      <td>NaN</td>\n",
+       "      <td>2.0</td>\n",
        "      <td>...</td>\n",
        "      <td>NaN</td>\n",
        "      <td>NaN</td>\n",
@@ -208,40 +208,40 @@
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>5 rows × 145 columns</p>\n",
+       "<p>5 rows × 109 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "   V0001  V0015  V0026  V0031  B001  C00301  C006  C008  C009  C011  ...  \\\n",
-       "0     11      1      1      1   1.0     1.0   2.0  55.0   1.0   1.0  ...   \n",
-       "1     11      1      1      1   1.0     2.0   1.0  69.0   4.0   1.0  ...   \n",
-       "2     11      1      1      1   1.0     3.0   1.0  31.0   2.0   4.0  ...   \n",
-       "3     11      1      1      1   1.0     4.0   1.0   9.0   2.0   NaN  ...   \n",
-       "4     11      1      1      1   1.0     5.0   2.0   6.0   4.0   NaN  ...   \n",
+       "   V0001  V0015  V0026  V0031  B001  C006  C008  C009  C011  C012  ...  \\\n",
+       "0     11      1      1      1   1.0   2.0  55.0   1.0   1.0   1.0  ...   \n",
+       "1     11      1      1      1   1.0   1.0  69.0   4.0   1.0   2.0  ...   \n",
+       "2     11      1      1      1   1.0   1.0  31.0   2.0   4.0   2.0  ...   \n",
+       "3     11      1      1      1   1.0   1.0   9.0   2.0   NaN   2.0  ...   \n",
+       "4     11      1      1      1   1.0   2.0   6.0   4.0   NaN   2.0  ...   \n",
        "\n",
-       "   Q067  Q068  Q11006  Q128  T001  H001  H002  H003  H004  H010  \n",
-       "0   NaN   2.0     2.0   2.0   2.0   2.0   2.0   2.0   1.0   3.0  \n",
-       "1   NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "2   NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "3   NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
-       "4   NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "   Q06509  Q06601  Q067  Q068  Q11006  Q128  T001  H003  H004  H010  \n",
+       "0     NaN     NaN   NaN   2.0     2.0   2.0   2.0   2.0   1.0   3.0  \n",
+       "1     NaN     NaN   NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "2     NaN     NaN   NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "3     NaN     NaN   NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN  \n",
+       "4     NaN     NaN   NaN   NaN     NaN   NaN   NaN   NaN   NaN   NaN  \n",
        "\n",
-       "[5 rows x 145 columns]"
+       "[5 rows x 109 columns]"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "df = pd.read_csv('..\\Bases\\Originais\\\\pns2019.csv', usecols=colunas)\n",
+    "df = pd.read_csv('..\\Bases\\Originais\\\\pns2019.csv', usecols=colunas_base_outliers)\n",
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 19,
    "id": "c60cb62d",
    "metadata": {},
    "outputs": [],
@@ -291,14 +291,14 @@
     "# Atributos sobre contraceptivo: 'R010', 'R025', 'R028', 'R029', 'R030', 'R031', 'R032', 'R033', 'R034', 'R03601', 'R03607', 'R03608', 'R03610', 'S065', \n",
     "\n",
     "\n",
-    "colunas_existentes = [col for col in colunas if col in df_filtrado.columns]\n",
+    "colunas_existentes = [col for col in colunas_base_outliers if col in df_filtrado.columns]\n",
     "\n",
     "df_filtrado = df_filtrado[colunas_existentes]"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": null,
    "id": "ea8120b5",
    "metadata": {},
    "outputs": [],
@@ -308,10 +308,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 21,
    "id": "faf47262",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "<>:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "C:\\Users\\llays\\AppData\\Local\\Temp\\ipykernel_18608\\2872141261.py:1: SyntaxWarning: invalid escape sequence '\\B'\n",
+      "  df_filtrado.to_csv('..\\Bases\\Criados\\\\base_outliers.csv', index=False)\n"
+     ]
+    }
+   ],
    "source": [
     "df_filtrado.to_csv('..\\Bases\\Criados\\\\base_outliers.csv', index=False)"
    ]
