--- a/Códigos/tratamento_faltantes.ipynb
+++ b/Códigos/tratamento_faltantes.ipynb
@@ -656,12 +656,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 90,
+   "execution_count": null,
    "id": "d8ceb9bc",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df.drop(columns=['E01603', 'E01605', 'E01604', 'E01804', 'E017', 'E019'], inplace=True)"
+    "df.drop(columns=['E01603', 'E01605', 'E017', 'E019'], inplace=True)"
    ]
   },
   {
