Corrigi o código dos outliers

--- a/Códigos/tratamento_outliers.ipynb
+++ b/Códigos/tratamento_outliers.ipynb
@@ -14,7 +14,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "12dbd321",
    "metadata": {},
    "outputs": [],
@@ -798,7 +798,7 @@
         }
        ],
        "conversionMethod": "pd.DataFrame",
-       "ref": "740ae24b-b358-4253-8caa-889c3efe206c",
+       "ref": "a9c19b42-d72f-4881-a556-f636be18e0fb",
        "rows": [
         [
          "658",
@@ -6467,7 +6467,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "base_outliers.to_csv('..\\\\Bases\\\\Criados\\\\base_sem_outliers.csv', index=False)"
+    "base.to_csv('..\\\\Bases\\\\Criados\\\\base_sem_outliers.csv', index=False)"
    ]
   }
  ],
