--- a/Códigos/codificacao.ipynb
+++ b/Códigos/codificacao.ipynb
@@ -93,12 +93,52 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3578ad2",
+   "metadata": {},
+   "source": [
+    "> LabelEncoder"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "01dc115e",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "from sklearn.preprocessing import LabelEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "00972f1a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cols_label_encode = ['', '', '']\n",
+    "base[cols_label_encode] = base[cols_label_encode].apply(LabelEncoder().fit_transform)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "c20d8b8e",
+   "metadata": {},
+   "source": [
+    "> OneHotEncoder"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "9cd24598",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.preprocessing import OneHotEncoder\n",
+    "from sklearn.compose import ColumnTransformer"
+   ]
   }
  ],
  "metadata": {
