--- a/Códigos/produto_cartesiano.ipynb
+++ b/Códigos/produto_cartesiano.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 357,
+   "execution_count": 106,
    "id": "4a4551df",
    "metadata": {},
    "outputs": [],
@@ -12,7 +12,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 358,
+   "execution_count": 107,
    "id": "b2ae8773",
    "metadata": {},
    "outputs": [],
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 359,
+   "execution_count": 108,
    "id": "1589ad2b",
    "metadata": {},
    "outputs": [],
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 360,
+   "execution_count": 109,
    "id": "8cf5240a",
    "metadata": {},
    "outputs": [],
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 361,
+   "execution_count": 110,
    "id": "123b52db",
    "metadata": {},
    "outputs": [],
@@ -62,7 +62,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 362,
+   "execution_count": 111,
    "id": "5371348e",
    "metadata": {},
    "outputs": [],
@@ -79,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 363,
+   "execution_count": 112,
    "id": "3dc47d33",
    "metadata": {},
    "outputs": [],
@@ -89,84 +89,62 @@
     "# Nº de ordem do titular\n",
     "# Plano de servidor público?\n",
     "\n",
-    "df = df.drop('I00103', axis=1)\n",
-    "df = df.drop('I001031', axis=1)\n",
-    "df = df.drop('I004', axis=1)"
+    "# df = df.drop('I00103', axis=1)\n",
+    "# df = df.drop('I001031', axis=1)\n",
+    "# df = df.drop('I004', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 364,
+   "execution_count": 113,
    "id": "9c3ca547",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Criando o novo atributo combinado\n",
-    "df['Plano_de_Saúde_Cobertura'] = df['I00102'].astype(str)  # Começa com o valor de I00102\n",
+    "# df['Plano_de_Saúde_Cobertura'] = df['I00102'].astype(str)  # Começa com o valor de I00102\n",
     "\n",
     "# Combinando com I00401, I00402, I00403 apenas quando I00102 for 1\n",
-    "df.loc[df['I00102'] == 1, 'Plano_de_Saúde_Cobertura'] = (\n",
-    "    df['I00102'].astype(str) + ' ' + \n",
-    "    df['I00401'].astype(str) + ' ' + \n",
-    "    df['I00402'].astype(str) + ' ' +  \n",
-    "    df['I00403'].astype(str)\n",
-    ")\n",
+    "#df.loc[df['I00102'] == 1, 'Plano_de_Saúde_Cobertura'] = (\n",
+    "#   df['I00102'].astype(str) + ' ' + \n",
+    "#    df['I00401'].astype(str) + ' ' + \n",
+    "#    df['I00402'].astype(str) + ' ' +  \n",
+    "#    df['I00403'].astype(str)\n",
+    "#)\n",
     "\n",
     "# Quando I00102 for 2, mantém apenas \"2\" (não combina com os outros)\n",
-    "df.loc[df['I00102'] == 2, 'Plano_de_Saúde_Cobertura'] = '2'"
+    "#df.loc[df['I00102'] == 2, 'Plano_de_Saúde_Cobertura'] = '2'"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 365,
+   "execution_count": 114,
    "id": "2b61ce5a",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "0                      2\n",
-       "1                      2\n",
-       "2        1.0 nan nan nan\n",
-       "3        1.0 1.0 1.0 1.0\n",
-       "4                      2\n",
-       "              ...       \n",
-       "24346                  2\n",
-       "24347                  2\n",
-       "24348                  2\n",
-       "24349                  2\n",
-       "24350    1.0 1.0 1.0 1.0\n",
-       "Name: Plano_de_Saúde_Cobertura, Length: 24351, dtype: object"
-      ]
-     },
-     "execution_count": 365,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# 3. Filtrar apenas as linhas que atendem às condições (opcional)\n",
-    "df_filtrado = df.dropna(subset=['Plano_de_Saúde_Cobertura'])\n",
+    "#df_filtrado = df.dropna(subset=['Plano_de_Saúde_Cobertura'])\n",
     "\n",
     "# Mostrar as primeiras linhas para verificar\n",
-    "df['Plano_de_Saúde_Cobertura']"
+    "#df['Plano_de_Saúde_Cobertura']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 366,
+   "execution_count": 115,
    "id": "a42dd85e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "df = df.drop('I00401', axis=1)\n",
-    "df = df.drop('I00402', axis=1)\n",
-    "df = df.drop('I00403', axis=1)"
+    "#df = df.drop('I00401', axis=1)\n",
+    "#df = df.drop('I00402', axis=1)\n",
+    "#df = df.drop('I00403', axis=1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 367,
+   "execution_count": 116,
    "id": "6a3aba3f",
    "metadata": {},
    "outputs": [],
@@ -190,7 +168,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 368,
+   "execution_count": 117,
    "id": "a21611d0",
    "metadata": {},
    "outputs": [],
@@ -228,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 369,
+   "execution_count": 118,
    "id": "1d684c1c",
    "metadata": {},
    "outputs": [
@@ -249,7 +227,7 @@
        "Name: imc, Length: 24351, dtype: float64"
       ]
      },
-     "execution_count": 369,
+     "execution_count": 118,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -260,7 +238,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 370,
+   "execution_count": 119,
    "id": "cb3dbe0c",
    "metadata": {},
    "outputs": [
@@ -281,7 +259,7 @@
        "Name: faixa_imc, Length: 24351, dtype: object"
       ]
      },
-     "execution_count": 370,
+     "execution_count": 119,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -292,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 371,
+   "execution_count": 120,
    "id": "ebcd700f",
    "metadata": {},
    "outputs": [
@@ -321,40 +299,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 372,
-   "id": "d616fb61",
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Valores substituídos: 11976 (agora há 11976 registros com 'Desempregado ou Estudante')\n"
-     ]
-    }
-   ],
-   "source": [
-    "# Me pergunto se devemos deixar esse na base pq ele vai ter mais de 11 mil inputações, tem muitos vazios\n",
-    "# Vou deixar o drop pronto comentado por via das dúvidas\n",
-    "# Nome do atributo: Quantos trabalhos ___tinha na semana de ___ a ___ \n",
-    "\n",
-    "# Contar valores vazios antes da substituição\n",
-    "vazios_antes = df['E011'].isna().sum() + (df['E011'] == '').sum()\n",
-    "\n",
-    "# Substituir valores vazios (NaN ou string vazia) por 'Desempregado ou Estudante'\n",
-    "df['E011'] = df['E011'].fillna('Desempregado ou Estudante')\n",
-    "df.loc[df['E011'] == '', 'E011'] = 'Desempregado ou Estudante'\n",
-    "\n",
-    "# Contar valores substituídos\n",
-    "vazios_depois = (df['E011'] == 'Desempregado ou Estudante').sum()\n",
-    "print(f\"Valores substituídos: {vazios_antes} (agora há {vazios_depois} registros com 'Desempregado ou Estudante')\")\n",
-    "\n",
-    "# df = df.drop('E011', axis=1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 373,
+   "execution_count": 121,
    "id": "87ecfcf8",
    "metadata": {},
    "outputs": [],
@@ -366,7 +311,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 374,
+   "execution_count": 122,
    "id": "f28fbf18",
    "metadata": {},
    "outputs": [
@@ -398,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 375,
+   "execution_count": 123,
    "id": "0a37468a",
    "metadata": {},
    "outputs": [
@@ -420,7 +365,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 376,
+   "execution_count": 124,
    "id": "a2c0e7ec",
    "metadata": {},
    "outputs": [],
@@ -430,7 +375,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 377,
+   "execution_count": 125,
    "id": "71b9ce14",
    "metadata": {},
    "outputs": [
@@ -451,7 +396,7 @@
        "Name: consumo_frutas_verduras, Length: 24321, dtype: object"
       ]
      },
-     "execution_count": 377,
+     "execution_count": 125,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -462,7 +407,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 378,
+   "execution_count": 126,
+   "id": "fed22af2",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('P00901', axis=1)\n",
+    "df = df.drop('P018', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 127,
    "id": "632d5477",
    "metadata": {},
    "outputs": [],
@@ -475,7 +431,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 379,
+   "execution_count": 128,
    "id": "8fa9d565",
    "metadata": {},
    "outputs": [
@@ -496,7 +452,7 @@
        "Name: consumo_alimentos_nsaudaveis, Length: 24321, dtype: object"
       ]
      },
-     "execution_count": 379,
+     "execution_count": 128,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -507,7 +463,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 380,
+   "execution_count": 129,
+   "id": "fa21c7ba",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df = df.drop('P02001', axis=1)\n",
+    "df = df.drop('P02002', axis=1)\n",
+    "df = df.drop('P02501', axis=1)\n",
+    "df = df.drop('P02602', axis=1)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 130,
    "id": "e7718531",
    "metadata": {},
    "outputs": [
@@ -533,13 +502,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 381,
+   "execution_count": 131,
    "id": "166072b6",
    "metadata": {},
    "outputs": [],
    "source": [
     "# 4. Salvar em um novo CSV (opcional)\n",
-    "df_filtrado.to_csv('../Bases/Criados/base_plano_cartesiano.csv', index=False)"
+    "df.to_csv('../Bases/Criados/base_plano_cartesiano.csv', index=False)"
    ]
   }
  ],
